--- a/TaskManager_redesign/TaskManager_redesign.csproj
+++ b/TaskManager_redesign/TaskManager_redesign.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;DevAtHome</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
